--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="description" content="temporizador pomodoro">
     <title>FocusTimer</title>
     
-    <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-svg">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="shortcut icon" href="./assets/images/favicon.svg" type="image/x-svg">
+    <link rel="stylesheet" href="./styles/styles.css">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <script type="module" src="./scripts.js" defer></script>
+    <script type="module" src="./scripts/scripts.js" defer></script>
 </head>
 <body>
     <div id="app">
