--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                 <span class="sr-only">Ligar música</span>
             </button>
         </section>
+        <section id="audios">
+            <audio src="./assets/audio/bg-audio.mp3" id="bg-audio" loop="true"></audio>
+            <audio src="./assets/audio/button-press.wav" id="button-press"></audio>
+            <audio src="./assets/audio/kichen-timer.mp3" id="kitchen-timer"></audio>
+        </section>
     </div>
 </body>
 </html>
